--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
   <h1>Hello World!</h1>
+
+  <!-- container -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
 </body>
 
 </html>
