--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <!-- container -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
