--- a/index.html
+++ b/index.html
@@ -2,19 +2,28 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
-  <link href="styles/styles.css" rel="stylesheet" type="text/css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-  <title>Web App Dashboard</title>
+    <meta charset="utf-8">
+    <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="styles/styles.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <title>Web App Dashboard</title>
 </head>
 
 <body>
-  <h1>Hello World!</h1>
-
-  <!-- container -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
-  <script src="app.js"></script>
+    <div id="container">
+        <header>
+        </header>
+        <div id="dashboard">
+            <nav>
+            </nav>
+            <main>
+            </main>
+        </div>
+        <!-- dashboard -->
+    </div>
+    <!-- container -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
