--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
-    <link href="styles/styles.css" rel="stylesheet" type="text/css" />
+    <link href="styles/normalize.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+    <link href="styles/styles.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <title>Web App Dashboard</title>
 </head>
