Added set global padding and margin to zero, add test icon and background color to nav

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </header>
         <div id="dashboard">
             <nav>
+              <img src="icons/icon-dashboard.svg" />
             </nav>
             <main>
             </main>
