Added all navigation icons to nav

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <div id="dashboard">
             <nav>
               <img src="icons/icon-dashboard.svg" />
+              <img src="icons/icon-members.svg" />
+              <img src="icons/icon-visits.svg" />
+              <img src="icons/icon-settings.svg" />
             </nav>
             <main>
             </main>
