--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link href="styles/normalize.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,400,600" rel="stylesheet">
     <link href="styles/styles.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <title>Web App Dashboard</title>
@@ -13,6 +13,7 @@
 <body>
     <div id="container">
         <header>
+          <h1><span>Your</span>App</h1>
         </header>
         <div id="dashboard">
             <nav>
