--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div id="container">
         <header>
           <h1><span>Your</span>App</h1>
+          <div class="header-notification">
+            <img src="icons/icon-bell.svg" />
+          </div>
         </header>
         <div id="dashboard">
             <nav>
