Begin setup of header elements by adding a tags, icons and profile name, add CSS properties for header notification and children

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <header>
           <h1><span>Your</span>App</h1>
           <div class="header-notification">
-            <img src="icons/icon-bell.svg" />
+            <a><img src="icons/icon-bell.svg" /></a>
+            <a><img id="profile-image" src="https://randomuser.me/api/portraits/men/81.jpg" /></a>
+            <a><p>John Sullivan</p></a>
           </div>
         </header>
         <div id="dashboard">
