Refactor header notifcation and profile html, css properties

--- a/index.html
+++ b/index.html
@@ -13,19 +13,24 @@
 <body>
     <div id="container">
         <header>
-          <h1><span>Your</span>App</h1>
-          <div class="header-notification">
-            <a><img src="icons/icon-bell.svg" /></a>
-            <a><img id="profile-image" src="https://randomuser.me/api/portraits/men/81.jpg" /></a>
-            <a><p>John Sullivan</p></a>
-          </div>
+            <h1><span>Your</span>App</h1>
+            <div class="header-identification">
+                <div class="header-notification">
+                    <img src="icons/icon-bell.svg" />
+                    <p></p>
+                </div>
+                <div class="header-profile">
+                    <img src="https://randomuser.me/api/portraits/men/81.jpg" />
+                    <p>John Sullivan</p>
+                </div>
+            </div>
         </header>
         <div id="dashboard">
             <nav>
-              <img src="icons/icon-dashboard.svg" />
-              <img src="icons/icon-members.svg" />
-              <img src="icons/icon-visits.svg" />
-              <img src="icons/icon-settings.svg" />
+                <img src="icons/icon-dashboard.svg" />
+                <img src="icons/icon-members.svg" />
+                <img src="icons/icon-visits.svg" />
+                <img src="icons/icon-settings.svg" />
             </nav>
             <main>
             </main>
