Add trademark symbol to heaeder h1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="container">
         <header>
-            <h1><span>Your</span>App</h1>
+            <h1><span>Your</span>App&trade;</h1>
             <div class="header-identification">
                 <div class="header-notification">
                     <img src="icons/icon-bell.svg" />
