--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </header>
         <div id="dashboard">
             <nav>
-                <img src="icons/icon-dashboard.svg" />
-                <img src="icons/icon-members.svg" />
-                <img src="icons/icon-visits.svg" />
-                <img src="icons/icon-settings.svg" />
+                <a href="#"><img src="icons/icon-dashboard.svg" /></a>
+                <a href="#"><img src="icons/icon-members.svg" /></a>
+                <a href="#"><img src="icons/icon-visits.svg" /></a>
+                <a href="#"><img src="icons/icon-settings.svg" /></a>
             </nav>
             <main>
             </main>
