Setup dashboard title and search bar, add float and styles to dashboard nav and search

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                 <a href="#"><img src="icons/icon-settings.svg" /></a>
             </nav>
             <main>
+              <div class="dashboard-search">
+                <h1>Dashboard</h1>
+                <div class="search-bar">
+                  <input type="search"></input>
+                </div>
+              </div>
             </main>
         </div>
         <!-- dashboard -->
