Refactor styles for search input element

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <div class="dashboard-search">
                 <h1>Dashboard</h1>
                 <div class="search-bar">
-                  <input type="search"></input>
+                  <input type="search" placeholder="Search"></input>
                 </div>
               </div>
             </main>
