Set up a test of Chart.js by adding demo chart to index.html and setup in app.js, test passed

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                   <input type="search" placeholder="Search"></input>
                 </div>
               </div>
+
+              <div class="chart-test">
+                <canvas id="myChart"></canvas>
+              </div>
             </main>
         </div>
         <!-- dashboard -->
