--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 </div>
               </div>
 
-              <div class="chart-test">
-                <canvas id="myChart"></canvas>
+              <div class="traffic-chart">
+                <canvas id="traffic"></canvas>
               </div>
             </main>
         </div>
