Added traffic chart heading, applied CSS to traffic chart heading, updated comments in app.js

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               </div>
 
               <div class="traffic-chart">
+                <h1>Traffic</h1>
                 <canvas id="traffic"></canvas>
               </div>
             </main>
