Setup layout of daily traffic and mobile users charts in index.html

--- a/index.html
+++ b/index.html
@@ -33,17 +33,27 @@
                 <a href="#"><img src="icons/icon-settings.svg" /></a>
             </nav>
             <main>
-              <div class="dashboard-search">
-                <h1>Dashboard</h1>
-                <div class="search-bar">
-                  <input type="search" placeholder="Search"></input>
+                <div class="dashboard-search">
+                    <h1>Dashboard</h1>
+                    <div class="search-bar">
+                        <input type="search" placeholder="Search"></input>
+                    </div>
                 </div>
-              </div>
 
-              <div class="traffic-chart">
-                <h1>Traffic</h1>
-                <canvas id="traffic"></canvas>
-              </div>
+                <div class="traffic-chart">
+                    <h1>Traffic</h1>
+                    <canvas id="traffic"></canvas>
+                </div>
+
+                <div class="daily-traffic-chart">
+                    <h1>Traffic</h1>
+                    <canvas id="daily-traffic"></canvas>
+                </div>
+                <div class="mobile-users-chart">
+                    <h1>Traffic</h1>
+                    <canvas id="mobile-users"></canvas>
+                </div>
+
             </main>
         </div>
         <!-- dashboard -->
