Add headings to daily traffic and mobile users charts

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 </div>
 
                 <div class="daily-traffic-chart">
-                    <h1>Traffic</h1>
+                    <h1> Daily Traffic</h1>
                     <canvas id="daily-traffic"></canvas>
                 </div>
                 <div class="mobile-users-chart">
-                    <h1>Traffic</h1>
+                    <h1>Mobile Users</h1>
                     <canvas id="mobile-users"></canvas>
                 </div>
 
