--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
                     <canvas id="traffic"></canvas>
                 </div>
 
-                <div class="daily-traffic-chart">
-                    <h1> Daily Traffic</h1>
-                    <canvas id="daily-traffic"></canvas>
-                </div>
-                <div class="mobile-users-chart">
-                    <h1>Mobile Users</h1>
-                    <canvas id="mobile-users"></canvas>
+                <div class="charts-container">
+                    <div class="daily-traffic-chart">
+                        <h1> Daily Traffic</h1>
+                        <canvas id="daily-traffic"></canvas>
+                    </div>
+                    <div class="mobile-users-chart">
+                        <h1>Mobile Users</h1>
+                        <canvas id="mobile-users"></canvas>
+                    </div>
                 </div>
 
             </main>
