Add social-media div to index.html, remove relative positioning from CSS and add clearfix to social-media div

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                         <canvas id="mobile-users"></canvas>
                     </div>
                 </div>
+
+                <div class="social-media">
+                  <h1>Social Stats</h1>
+                </div>
             </main>
         </div>
         <!-- dashboard -->
