Create social media widget divs and add content in index.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,23 @@
 
                 <div class="social-media">
                   <h1>Social Stats</h1>
+                  <div id="twitter" class="social-widget">
+                    <img src="icons/icon-twitter.svg" />
+                    <h4>Twitter</h4>
+                    <p>10,345</p>
+                  </div>
+
+                  <div id="facebook" class="social-widget">
+                    <img src="icons/icon-facebook.svg" />
+                    <h4>Facebook</h4>
+                    <p>8,739</p>
+                  </div>
+
+                  <div id="google" class="social-widget">
+                    <img src="icons/icon-google-plus.svg" />
+                    <h4>Google+</h4>
+                    <p>2,530</p>
+                  </div>
                 </div>
             </main>
         </div>
