--- a/index.html
+++ b/index.html
@@ -57,24 +57,26 @@
                 </div>
 
                 <div class="social-media">
-                  <h1>Social Stats</h1>
-                  <div id="twitter" class="social-widget">
-                    <img src="icons/icon-twitter.svg" />
-                    <h4>Twitter</h4>
-                    <p>10,345</p>
-                  </div>
+                    <h1>Social Stats</h1>
+                    <div class="social-row">
+                        <div id="twitter" class="social-widget">
+                            <img src="icons/icon-twitter.svg" />
+                            <h4>Twitter</h4>
+                            <p>10,345</p>
+                        </div>
 
-                  <div id="facebook" class="social-widget">
-                    <img src="icons/icon-facebook.svg" />
-                    <h4>Facebook</h4>
-                    <p>8,739</p>
-                  </div>
+                        <div id="facebook" class="social-widget">
+                            <img src="icons/icon-facebook.svg" />
+                            <h4>Facebook</h4>
+                            <p>8,739</p>
+                        </div>
 
-                  <div id="google" class="social-widget">
-                    <img src="icons/icon-google-plus.svg" />
-                    <h4>Google+</h4>
-                    <p>2,530</p>
-                  </div>
+                        <div id="google" class="social-widget">
+                            <img src="icons/icon-google-plus.svg" />
+                            <h4>Google+</h4>
+                            <p>2,530</p>
+                        </div>
+                    </div>
                 </div>
             </main>
         </div>
