--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                     </div>
                 </div>
 
+                <div class="dashboard-alert">
+                  <h2>Alert: Dashboard maintenance scheduled for Sunday 1:00 AM - 3:00 AM<span class="clost-alert">x</span></h2>
+                </div>
+
                 <div class="traffic-chart">
                     <h1>Traffic</h1>
                     <canvas id="traffic"></canvas>
