Refactor styles for dashboard-alert, make close-alert span uppercase

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="dashboard-alert">
-                  <h2>Alert: Dashboard maintenance scheduled for Sunday 1:00 AM - 3:00 AM<span class="clost-alert">x</span></h2>
+                  <h2><span>Alert:</span> Site maintenance scheduled for Sunday 1:00 AM - 3:00 AM<span class="close-alert">X</span></h2>
                 </div>
 
                 <div class="traffic-chart">
