Added onclick so alert message disappears when clicked, index.html

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     </div>
                 </div>
 
-                <div class="dashboard-alert">
-                  <h2><span>Alert:</span> Site maintenance scheduled for Sunday 1:00 AM - 3:00 AM<span class="close-alert">X</span></h2>
+                <div id="alert" class="dashboard-alert">
+                    <h2><span>Alert:</span> Site maintenance scheduled for Sunday 1:00 AM - 3:00 AM<span class="close-alert" onclick="this.parentElement.parentElement.style.display='none';">X</span></h2>
                 </div>
 
                 <div class="traffic-chart">
