--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <div class="header-identification">
                 <div class="header-notification">
                     <img src="icons/icon-bell.svg" />
-                    <p></p>
+                    <p class="notification"></p>
+                </div>
+                <div class="header-divider">
+                    <p class="divider"></p>
                 </div>
                 <div class="header-profile">
                     <img src="https://randomuser.me/api/portraits/men/81.jpg" />
