Setup membership-container, members-widget, activity-widget in index.html, apply styles to membership container elements

--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="membership-container">
+                    <div class="members-widget">
+                      <h1>New Members</h1>
+                    </div>
+                    <div class="activity-widget">
+                      <h1>Recent Activity</h1>
+                    </div>
+                </div>
             </main>
         </div>
         <!-- dashboard -->
