--- a/index.html
+++ b/index.html
@@ -88,10 +88,18 @@
 
                 <div class="membership-container">
                     <div class="members-widget">
-                      <h1>New Members</h1>
+                        <h1>New Members</h1>
+                        <div class="member">
+                            <div class="member-info">
+                                <img src="https://randomuser.me/api/portraits/men/81.jpg">
+                                <p>John Sullivan</p>
+                                <p>john.sullivan@example.com</p>
+                            </div>
+                            <p class="join-date">10/15/15</p>
+                        </div>
                     </div>
                     <div class="activity-widget">
-                      <h1>Recent Activity</h1>
+                        <h1>Recent Activity</h1>
                     </div>
                 </div>
             </main>
