Refactor structure of member div by adding member-email and member info classes, refactor styles for member div

--- a/index.html
+++ b/index.html
@@ -90,11 +90,13 @@
                     <div class="members-widget">
                         <h1>New Members</h1>
                         <div class="member">
+                          <div class="member-profile">
+                           <img src="https://randomuser.me/api/portraits/men/81.jpg">
                             <div class="member-info">
-                                <img src="https://randomuser.me/api/portraits/men/81.jpg">
                                 <p>John Sullivan</p>
-                                <p>john.sullivan@example.com</p>
+                                <p class="member-email">john.sullivan@example.com</p>
                             </div>
+                          </div>
                             <p class="join-date">10/15/15</p>
                         </div>
                     </div>
