Add placeholder members for members-widget, remove border bottom for member last-child

--- a/index.html
+++ b/index.html
@@ -99,6 +99,36 @@
                           </div>
                             <p class="join-date">10/15/15</p>
                         </div>
+                        <div class="member">
+                          <div class="member-profile">
+                           <img src="https://randomuser.me/api/portraits/men/81.jpg">
+                            <div class="member-info">
+                                <p>John Sullivan</p>
+                                <p class="member-email">john.sullivan@example.com</p>
+                            </div>
+                          </div>
+                            <p class="join-date">10/15/15</p>
+                        </div>
+                        <div class="member">
+                          <div class="member-profile">
+                           <img src="https://randomuser.me/api/portraits/men/81.jpg">
+                            <div class="member-info">
+                                <p>John Sullivan</p>
+                                <p class="member-email">john.sullivan@example.com</p>
+                            </div>
+                          </div>
+                            <p class="join-date">10/15/15</p>
+                        </div>
+                        <div class="member">
+                          <div class="member-profile">
+                           <img src="https://randomuser.me/api/portraits/men/81.jpg">
+                            <div class="member-info">
+                                <p>John Sullivan</p>
+                                <p class="member-email">john.sullivan@example.com</p>
+                            </div>
+                          </div>
+                            <p class="join-date">10/15/15</p>
+                        </div>
                     </div>
                     <div class="activity-widget">
                         <h1>Recent Activity</h1>
