Updated member profiles with new photos and content

--- a/index.html
+++ b/index.html
@@ -91,43 +91,43 @@
                         <h1>New Members</h1>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/men/81.jpg">
+                           <img src="https://randomuser.me/api/portraits/women/64.jpg">
                             <div class="member-info">
-                                <p>John Sullivan</p>
-                                <p class="member-email">john.sullivan@example.com</p>
+                                <p>Victoria Chambers</p>
+                                <p class="member-email">vchambers@example.com</p>
                             </div>
                           </div>
                             <p class="join-date">10/15/15</p>
                         </div>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/men/81.jpg">
+                           <img src="https://randomuser.me/api/portraits/men/21.jpg">
                             <div class="member-info">
-                                <p>John Sullivan</p>
-                                <p class="member-email">john.sullivan@example.com</p>
+                                <p>Dale Byrd</p>
+                                <p class="member-email">dale.byrd@example.com</p>
                             </div>
                           </div>
-                            <p class="join-date">10/15/15</p>
+                            <p class="join-date">10/14/15</p>
                         </div>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/men/81.jpg">
+                           <img src="https://randomuser.me/api/portraits/women/81.jpg">
                             <div class="member-info">
-                                <p>John Sullivan</p>
-                                <p class="member-email">john.sullivan@example.com</p>
+                                <p>Dawn Wood</p>
+                                <p class="member-email">dawn.wood@example.com</p>
                             </div>
                           </div>
-                            <p class="join-date">10/15/15</p>
+                            <p class="join-date">10/14/15</p>
                         </div>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/men/81.jpg">
+                           <img src="https://randomuser.me/api/portraits/men/55.jpg">
                             <div class="member-info">
-                                <p>John Sullivan</p>
-                                <p class="member-email">john.sullivan@example.com</p>
+                                <p>Dan Oliver</p>
+                                <p class="member-email">dan.oliver@example.com</p>
                             </div>
                           </div>
-                            <p class="join-date">10/15/15</p>
+                            <p class="join-date">10/13/15</p>
                         </div>
                     </div>
                     <div class="activity-widget">
