Refactor activity widget content with member profile info, unicode caret, applied stlyes to member activity

--- a/index.html
+++ b/index.html
@@ -132,6 +132,46 @@
                     </div>
                     <div class="activity-widget">
                         <h1>Recent Activity</h1>
+                        <div class="member">
+                          <div class="member-profile">
+                           <img src="https://randomuser.me/api/portraits/women/64.jpg">
+                            <div class="member-info">
+                                <p>Victoria Chambers joined the Forum</p>
+                                <p class="member-activity">4 hours ago</p>
+                            </div>
+                          </div>
+                            <p class="activity-arrow">&#8250;</p>
+                        </div>
+                        <div class="member">
+                          <div class="member-profile">
+                           <img src="https://randomuser.me/api/portraits/men/54.jpg">
+                            <div class="member-info">
+                                <p>Jerod Wood shared data on Twitter</p>
+                                <p class="member-activity">6 hours ago</p>
+                            </div>
+                          </div>
+                            <p class="activity-arrow">&#8250;</p>
+                        </div>
+                        <div class="member">
+                          <div class="member-profile">
+                           <img src="https://randomuser.me/api/portraits/women/81.jpg">
+                            <div class="member-info">
+                                <p>Dawn Wood joined the Forum</p>
+                                <p class="member-activity">1 day ago</p>
+                            </div>
+                          </div>
+                            <p class="activity-arrow">&#8250;</p>
+                        </div>
+                        <div class="member">
+                          <div class="member-profile">
+                           <img src="https://randomuser.me/api/portraits/women/40.jpg">
+                            <div class="member-info">
+                                <p>Sally Jones joined the Forum</p>
+                                <p class="member-activity">2 days ago</p>
+                            </div>
+                          </div>
+                            <p class="activity-arrow">&#8250;</p>
+                        </div>
                     </div>
                 </div>
             </main>
