--- a/index.html
+++ b/index.html
@@ -174,6 +174,15 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="settings-container">
+                  <div class="messages-widget">
+                    <h1>Message User</h1>
+                  </div>
+                  <div class="settings-widget">
+                    <h1>Settings</h1>
+                  </div>
+                </div>
             </main>
         </div>
         <!-- dashboard -->
