--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
                 <div class="settings-container">
                   <div class="messages-widget">
                     <h1>Message User</h1>
+                    <form class="message-user">
+                      <input type="search" placeholder="Search for User">
+                      <input type="textarea" placeholder="Message for User">
+                      <button>SEND</button>
+                    </form>
                   </div>
                   <div class="settings-widget">
                     <h1>Settings</h1>
