Added styles to message-user form and child elements, change input to textarea

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <h1>Message User</h1>
                     <form class="message-user">
                       <input type="search" placeholder="Search for User">
-                      <input type="textarea" placeholder="Message for User">
+                      <textarea type="textarea" placeholder="Message for User"></textarea>
                       <button>SEND</button>
                     </form>
                   </div>
