--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link href="styles/normalize.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/css-toggle-switch/latest/toggle-switch.css" />
     <link href="styles/styles.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <title>Web App Dashboard</title>
@@ -186,6 +187,9 @@
                   </div>
                   <div class="settings-widget">
                     <h1>Settings</h1>
+                    <div class="user-settings">
+
+                    </div>
                   </div>
                 </div>
             </main>
