Setup test on-off switch from css toggle switch in index.html

--- a/index.html
+++ b/index.html
@@ -188,7 +188,17 @@
                   <div class="settings-widget">
                     <h1>Settings</h1>
                     <div class="user-settings">
-
+                        <div>
+                          <label class="switch-light switch-ios" onclick>
+                            <input type="checkbox">
+                            <strong>Wireless</strong>
+                            <span>
+                              <span>Off</span>
+                              <span>On</span>
+                              <a></a>
+                            </span>
+                          </label>
+                        </div>
                     </div>
                   </div>
                 </div>
