Setup email notifications switch in index.html, apply classes, apply custom styles

--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
                   <div class="settings-widget">
                     <h1>Settings</h1>
                     <div class="user-settings">
-                        <div>
+                        <div class="email-settings">
                           <label class="switch-light switch-ios" onclick>
                             <input type="checkbox">
-                            <strong>Wireless</strong>
+                            <strong>Send Email Notifications</strong>
                             <span>
                               <span>Off</span>
                               <span>On</span>
