Setup public profile switch in index.html, apply classes, apply custom styles

--- a/index.html
+++ b/index.html
@@ -199,6 +199,17 @@
                             </span>
                           </label>
                         </div>
+                        <div class="public-profile">
+                          <label class="switch-light switch-ios" onclick>
+                            <input type="checkbox">
+                            <strong>Set Profile to Public</strong>
+                            <span>
+                              <span>Off</span>
+                              <span>On</span>
+                              <a></a>
+                            </span>
+                          </label>
+                        </div>
                     </div>
                   </div>
                 </div>
