Setup user timezone div and select element in index.html

--- a/index.html
+++ b/index.html
@@ -211,6 +211,15 @@
                           </label>
                         </div>
                     </div>
+                    <div class="user-timezone">
+                      <select name="timezone">
+                        <option value="" disabled selected>Select Timezone</option>
+                        <option value="eastern">Eastern</option>
+                        <option value="central">Central</option>
+                        <option value="mountain">Mountain</option>
+                        <option value="pacific">Pacific</option>
+                      </select>
+                    </div>
                   </div>
                 </div>
             </main>
