Add settings status buttons to index.html, apply custom styles for setting status buttons

--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@
                         <option value="pacific">Pacific</option>
                       </select>
                     </div>
+                    <div class="settings-status">
+                      <button>SAVE</button>
+                      <button>CANCEL</button>
+                    </div>
                   </div>
                 </div>
             </main>
