Setup test of error functionality for textarea in index.html, notifiy user or error when field is empty - app.js

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                   <div class="messages-widget">
                     <h1>Message User</h1>
                     <form class="message-user">
-                      <input type="search" placeholder="Search for User">
-                      <textarea type="textarea" placeholder="Message for User"></textarea>
+                      <input id="username_select" type="text" placeholder="Search for User">
+                      <textarea id="username_message" type="text" placeholder="Message for User"></textarea>
                       <button>SEND</button>
                     </form>
                   </div>
