--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <form class="message-user">
                       <input id="username_select" type="text" placeholder="Search for User">
                       <textarea id="username_message" type="text" placeholder="Message for User"></textarea>
-                      <button>SEND</button>
+                      <button id="send_message">SEND</button>
                     </form>
                   </div>
                   <div class="settings-widget">
