Refactored index.html errors based on W3C HTML Validator report

--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
             <h1><span>Your</span>App&trade;</h1>
             <div class="header-identification">
                 <div class="header-notification">
-                    <img src="icons/icon-bell.svg" />
+                    <img src="icons/icon-bell.svg" alt="Alert Bell Icon" />
                     <p class="notification"></p>
                 </div>
                 <div class="header-divider">
                     <p class="divider"></p>
                 </div>
                 <div class="header-profile">
-                    <img src="https://randomuser.me/api/portraits/men/81.jpg" />
+                    <img src="https://randomuser.me/api/portraits/men/81.jpg" alt="Member photo" />
                     <p>John Sullivan</p>
                 </div>
             </div>
         </header>
         <div id="dashboard">
             <nav>
-                <a href="#dashboard"><img src="icons/icon-dashboard.svg" /></a>
-                <a href="#membership"><img src="icons/icon-members.svg" /></a>
-                <a href="#daily-traffic"><img src="icons/icon-visits.svg" /></a>
-                <a href="#settings"><img src="icons/icon-settings.svg" /></a>
+                <a href="#dashboard"><img src="icons/icon-dashboard.svg" alt="Dashboard icon" /></a>
+                <a href="#membership"><img src="icons/icon-members.svg" alt="Membership icon" /></a>
+                <a href="#daily-traffic"><img src="icons/icon-visits.svg" alt="Website traffic icon" /></a>
+                <a href="#settings"><img src="icons/icon-settings.svg" alt="Settings icon" /></a>
             </nav>
             <main>
                 <div class="dashboard-search">
                     <h1>Dashboard</h1>
                     <div class="search-bar">
-                        <input type="search" placeholder="Search"></input>
+                        <input type="search" placeholder="Search">
                     </div>
                 </div>
 
@@ -68,19 +68,19 @@
                     <h1>Social Stats</h1>
                     <div class="social-row">
                         <div id="twitter" class="social-widget">
-                            <img src="icons/icon-twitter.svg" />
+                            <img src="icons/icon-twitter.svg" alt="Twitter icon" />
                             <h4>Twitter</h4>
                             <p>10,345</p>
                         </div>
 
                         <div id="facebook" class="social-widget">
-                            <img src="icons/icon-facebook.svg" />
+                            <img src="icons/icon-facebook.svg" alt="Facebook icon" />
                             <h4>Facebook</h4>
                             <p>8,739</p>
                         </div>
 
                         <div id="google" class="social-widget">
-                            <img src="icons/icon-google-plus.svg" />
+                            <img src="icons/icon-google-plus.svg" alt="Google Plus icon" />
                             <h4>Google+</h4>
                             <p>2,530</p>
                         </div>
@@ -92,7 +92,7 @@
                         <h1>New Members</h1>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/women/64.jpg">
+                           <img src="https://randomuser.me/api/portraits/women/64.jpg" alt="Member photo">
                             <div class="member-info">
                                 <p>Victoria Chambers</p>
                                 <p class="member-email">vchambers@example.com</p>
@@ -102,7 +102,7 @@
                         </div>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/men/21.jpg">
+                           <img src="https://randomuser.me/api/portraits/men/21.jpg" alt="Member photo">
                             <div class="member-info">
                                 <p>Dale Byrd</p>
                                 <p class="member-email">dale.byrd@example.com</p>
@@ -112,7 +112,7 @@
                         </div>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/women/81.jpg">
+                           <img src="https://randomuser.me/api/portraits/women/81.jpg" alt="Member photo">
                             <div class="member-info">
                                 <p>Dawn Wood</p>
                                 <p class="member-email">dawn.wood@example.com</p>
@@ -122,7 +122,7 @@
                         </div>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/men/55.jpg">
+                           <img src="https://randomuser.me/api/portraits/men/55.jpg" alt="Member photo">
                             <div class="member-info">
                                 <p>Dan Oliver</p>
                                 <p class="member-email">dan.oliver@example.com</p>
@@ -135,7 +135,7 @@
                         <h1>Recent Activity</h1>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/women/64.jpg">
+                           <img src="https://randomuser.me/api/portraits/women/64.jpg" alt="Member photo">
                             <div class="member-info">
                                 <p>Victoria Chambers joined the Forum</p>
                                 <p class="member-activity">4 hours ago</p>
@@ -145,7 +145,7 @@
                         </div>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/men/54.jpg">
+                           <img src="https://randomuser.me/api/portraits/men/54.jpg" alt="Member photo">
                             <div class="member-info">
                                 <p>Jerod Wood shared data on Twitter</p>
                                 <p class="member-activity">6 hours ago</p>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/women/81.jpg">
+                           <img src="https://randomuser.me/api/portraits/women/81.jpg" alt="Member photo">
                             <div class="member-info">
                                 <p>Dawn Wood joined the Forum</p>
                                 <p class="member-activity">1 day ago</p>
@@ -165,7 +165,7 @@
                         </div>
                         <div class="member">
                           <div class="member-profile">
-                           <img src="https://randomuser.me/api/portraits/women/40.jpg">
+                           <img src="https://randomuser.me/api/portraits/women/40.jpg" alt="Member photo">
                             <div class="member-info">
                                 <p>Sally Jones joined the Forum</p>
                                 <p class="member-activity">2 days ago</p>
@@ -179,9 +179,9 @@
                 <div id="settings" class="settings-container">
                   <div class="messages-widget">
                     <h1>Message User</h1>
-                    <form class="message-user" action="index.html" methos="post">
+                    <form class="message-user" action="index.html" method="post">
                       <input id="username_select" type="text" placeholder="Username">
-                      <textarea id="username_message" type="text" placeholder="Message for User"></textarea>
+                      <textarea id="username_message" placeholder="Message for User"></textarea>
                       <div id="user-alert" class="dashboard-alert">
                           <h2>Please select a user!<span class="close-alert" onclick="this.parentElement.parentElement.style.display='none';">X</span></h2>
                       </div>
